--- a/pages/atividades.html
+++ b/pages/atividades.html
@@ -10,6 +10,8 @@
     <section>
         
         <div class="flex-container"> 
+            <div class="q1"></div>
+            <div class="q2"></div>
             </div>
         </section>
 </body>
