--- a/pages/atividades.html
+++ b/pages/atividades.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <section>
-        
-        <div class="flex-container"> 
-            <div class="q1"></div>
-            <div class="q2"></div>
-            </div>
+
+        <div class="flex-container">
+            <div class="i1"></div>  
+            <div class="i2"></div>  
+            <div class="i3"></div>  
+              </div>    
+
+
+
+
         </section>
 </body>
 </html>
