Feat: conclui a terceira etapa da missão ninja

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -22,6 +22,32 @@
                     <option value="kage">Kage</option>
                 </select>
             </div>
+
+            <div class="tipo">
+                <label for="tipo">Qual o nível da Missão?</label>
+                <div>
+                    <label for="d">
+                        <input type="radio" name="tipo" value="d"/> D
+                    </label>
+                </div>
+                <div>
+                    <label for="c">
+                        <input type="radio" name="tipo" value="c"/> C
+                    </label>
+                <div>
+                    <label for="b">
+                        <input type="radio" name="tipo" value="b"/> B
+                    </label>
+                <div>
+                    <label for="a">
+                        <input type="radio" name="tipo" value="a"/> A
+                    </label>
+                <div>
+                    <label for="s">
+                        <input type="radio" name="tipo" value="s"/> S
+                    </label>
+                </div>
+            </div>
         </form>
     </body>
 </html>
