--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -48,6 +48,37 @@
                     </label>
                 </div>
             </div>
+
+                <div class="especialidade">
+                    <label for="especialidade">Qual a especialidade ninja?</label>
+                    
+                    <div>
+                        <label for="especialidade">
+                            <input type="checkbox" name="especialidade" value="taijutsu" />
+                            👊 Taijutsu
+                        </label>
+                    </div>
+                    <div>
+                        <label for="especialidade">
+                            <input type="checkbox" name="especialidade" value="ninjutso" />
+                            ⚡ Ninjutso
+                        </label>
+                    </div>
+                    <div>
+                        <label for="especialidade">
+                            <input type="checkbox" name="especialidade" value="genjutso" />
+                            🌀 Genjutso
+                        </label>
+                    </div>
+                    <div>
+                        <label for="especialidade">
+                            <input type="checkbox" name="especialidade" value="medico" />
+                            💊 Ninja Médico
+                        </label>
+                    </div>
+                </div>
+
+            </div>
         </form>
     </body>
 </html>
