Feat: conclui a quarta etapa da missão ninja

--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -61,7 +61,7 @@
                     <div>
                         <label for="especialidade">
                             <input type="checkbox" name="especialidade" value="ninjutso" />
-                            ⚡ Ninjutso
+                            ⚡ Ninjutsu
                         </label>
                     </div>
                     <div>
