--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -79,6 +79,15 @@
                 </div>
 
             </div>
+
+            <div class="descricao">
+                <label for="descricao">Qual a descrição da missão</label>
+
+                <textarea name="descricao" id="descricao" placeholder="Digite todas as informações da missão"
+                rows="6"
+                cols="40"
+                ></textarea>
+            </div>
         </form>
     </body>
 </html>
